# claude-financial-tools-mcp

./: .env.example  Justfile  README.md  docker-compose.yml  medium_article.md  pyproject.toml  setup_claude_config.sh
examples/: list_qdrant_tools.py  test_qdrant_tools.py
scripts/: delete_collection.py  ingest_pdf.py
servers/: mcp_server.py  tool_definitions.yaml
src/: __init__.py  config.py
src/helpers/: __init__.py  logs.py  qdrant_utils.py
src/models/: __init__.py  embedder.py
src/scripts/: pdf_ingestion.py
src/tools/: __init__.py  qdrant_tools.py
